--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,21 +2,21 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "tailwind:init": "tailwindcss init -p",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.4"
+    "react-router-dom": "^7.2.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -28,6 +28,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.1"
   }
 }
