--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.15"
   },
