--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.2",
     "framer-motion": "^12.4.10",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
