--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.2",
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.513.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
