--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
-BACKEND_URL=https://nuvora-backend-fa1q.onrender.com
+# BACKEND_URL=https://nuvora-backend-fa1q.onrender.com
+
+BACKEND_URL=http://localhost:3000
+
