--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7",
     "prisma": "^6.1.0",
     "socket.io": "^4.8.1",
     "zod": "^3.25.48"
