--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.8.2",
+    "axios": "^1.11.0",
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
