Testing frontend deployment

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 # BACKEND_URL=https://nuvora-backend-fa1q.onrender.com
 
-BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=http://localhost:3000
+
 
