--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.0.12",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
+    "motion": "^12.23.12",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
