--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^12.4.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
-    "motion": "^12.23.12",
+    "motion": "^12.0.0-alpha.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
