--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.12"
   },
