--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hugeicons/react": "^1.0.5",
     "@tailwindcss/vite": "^4.0.12",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
