--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hugeicons/react": "^1.0.5",
     "@tailwindcss/vite": "^4.0.12",
     "autoprefixer": "^10.4.20",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
     "framer-motion": "^12.4.10",
+    "heroicons": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.513.0",
     "motion": "^12.0.0-alpha.2",
