--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "seed": "node prisma/seed.js"
-
   },
   "keywords": [],
   "author": "",
@@ -29,6 +28,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "prisma": "^6.1.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
     "zod": "^3.25.48"
   },
