--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@upstash/redis": "^1.36.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-session": "^2.1.1",
@@ -23,6 +24,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.9.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
